Remove preview features to make it compile and run without --enable-preview