@@ -34,7 +34,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -54,10 +53,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.3.0</version>
-                <configuration>
-                    <release>16</release>
-                    <additionalOptions>--enable-preview</additionalOptions>
-                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
